force-app/main/default/objects/Opportunity/fields/Data_Limite_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Data_Limite_de_Envio__c</fullName>
    <label>Data Limite de Envio</label>
    <type>DateTime</type>
</CustomField>