force-app/main/default/objects/Opportunity/fields/Estimativa_da_taxa__c.field-meta.xml
<CustomField>
    <fullName>Estimativa_da_taxa__c</fullName>
    <formula>IF (
    Quantidade_media_de_viagens__c &lt;= 0.2,
    0.3,
      IF(
      Quantidade_media_de_viagens__c &gt; 0.2 &amp;&amp; Quantidade_media_de_viagens__c &lt;= 0.5,
      0.2,
      0.1
       )
)</formula>
    <inlineHelpText>Até 20 viagens: 30% / Até 50 viagens: 20% / &gt; 50 viagens: 10%</inlineHelpText>
    <label>Estimativa da taxa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>