force-app/main/default/objects/Opportunity/fields/Estimativa_de_gasto_mensal__c.field-meta.xml
<CustomField>
    <fullName>Estimativa_de_gasto_mensal__c</fullName>
    <formula>Quantidade_media_de_viagens__c *  Valor_medio_de_viagem__c</formula>
    <label>Estimativa de gasto mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>