force-app/main/default/objects/Opportunity/fields/Estimativa_do_faturamento_mensal__c.field-meta.xml
<CustomField>
    <fullName>Estimativa_do_faturamento_mensal__c</fullName>
    <formula>(Quantidade_media_de_viagens__c *  Valor_medio_de_viagem__c) *  Estimativa_da_taxa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimativa do faturamento mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>