force-app/main/default/objects/Opportunity/fields/Limite_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_Credito__c</fullName>
    <formula>Account.Limite_de_Credito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limite de Crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>