force-app/main/default/objects/Opportunity/fields/Notificacao_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Notificacao_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificação Enviada?</label>
    <type>Checkbox</type>
</CustomField>