force-app/main/default/objects/Opportunity/fields/Quantidade_media_de_viagens__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_media_de_viagens__c</fullName>
    <label>Quantidade média de viagens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>