force-app/main/default/objects/Opportunity/fields/Status_da_solicitacao_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Status_da_solicitacao_de_credito__c</fullName>
    <label>Status da solicitação de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando avaliação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>