force-app/main/default/objects/Opportunity/fields/Valor_medio_de_viagem__c.field-meta.xml
<CustomField>
    <fullName>Valor_medio_de_viagem__c</fullName>
    <label>Valor médio de viagem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>