force-app/main/default/objects/Opportunity/recordTypes/Corporacao.recordType-meta.xml
<RecordType>
    <fullName>Corporacao</fullName>
    <active>true</active>
    <businessProcess>Corporação</businessProcess>
    <label>Corporação</label>
</RecordType>