force-app/main/default/objects/Opportunity/recordTypes/Viagens_Corporativas.recordType-meta.xml
<RecordType>
    <fullName>Viagens_Corporativas</fullName>
    <active>true</active>
    <businessProcess>Viagens Corporativas</businessProcess>
    <label>Viagens Corporativas</label>
</RecordType>